--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ th:last-child, td:last-child {
 }
 
 #Home {
-  background-image: url(../imgs/heading.png);
+  background-image: url(heading.png);
   width: 100%;
   height: 100vh;
   background-size: cover;
